--- a/packages/viu-ui/client/scss/viu/components/_tab.scss
+++ b/packages/viu-ui/client/scss/viu/components/_tab.scss
@@ -4,7 +4,8 @@ $swipe-tab-color: $color-white;
         position: relative;
         height: 500px;
         .simplebar {
-            height: 100%!important;
+            // height: 100%!important;
+            // display:-webkit-box;display:-ms-flexbox;display:flex
         }
     }
     &.swipe-tabs {
